<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Clover</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">Profile</string>
    <string name="lblProfileName">Name</string>
    <string name="txtProfileName">Name</string>
    <string name="btnProfileImage">Profile Picture</string>
    <string name="lblInterests">Interests</string>
    <string name="lblGetContactedBy">Get contacted by</string>
    <string name="btnSaveChanges">Save Changes</string>
    <string name="btnChooseInterest">Edit</string>
    <string name="lblInterestsList">Set your Interests preferences</string>
    <string name="btnChooseContact">Edit</string>
    <string name="lblContactedByList">Set your Contact preferences</string>
    <string name="btnEditMusic">Edit music interests</string>
    <string name="btnEditLiterature">Edit literature interests</string>
    <string name="btnEditMovies">Edit movies interests</string>
    <string name="btnEditArt">Edit art interests</string>
    <string name="btnEditTvShows">Edit TV Shows interests</string>
    <string name="btnEditSports">Edit sports interest</string>
    <string name="btnEditLookingFor">Edit looking for interest</string>
    <string name="profileNameRequired">A profile name is required</string>
    <string name="setInterests">Set your interests to continue</string>
    <string name="setContactedBy">Set your Contact preferences to continue</string>
    <string name="setPicture">Set a picture to continue</string>
    <string name="title_activity_interests">Interests</string>
    <string name="lblInterestsL">Interest</string>
    <string name="lblMusic">Music</string>
    <string name="txtMusic">Type your favorite artist (optional)</string>
    <string name="lblLiterature">Literature</string>
    <string name="txtLiterature">Type your favorite artist (optional)</string>
    <string name="lblMovies">Movies</string>
    <string name="txtMovies">Type your favorite actor (optional)</string>
    <string name="lblArt">Art</string>
    <string name="txtArt">Type your favorite artist (optional)</string>
    <string name="lblTvShow">TV Shows</string>
    <string name="txtTvShow">Type your favorite show (optional)</string>
    <string name="lblSports">Sports</string>
    <string name="txtSports">Type your favorite athlete (optional)</string>
    <string name="lblScience">Science</string>
    <string name="txtScience">Type your favorite topics (optional)</string>
    <string name="lblLookingFor">Looking For</string>
    <string name="txtLookingFor">Type your aim to find (optional)</string>
    <string name="btnSaveInterestsChanges">Save Interests</string>
    <string name="whatILike">What I like about</string>
    <string name="interestRequired">Please select an interest</string>
    <string name="title_activity_get_contacted_by">Get Contacted By</string>
    <string name="lblContact">Contact me</string>
    <string name="lblCellphone">Cellphone</string>
    <string name="txtPhone">Phone Number</string>
    <string name="lblGoogle">Google+</string>
    <string name="txtGoogle">Google+ Account</string>
    <string name="lblFacebook">Facebook</string>
    <string name="txtFacebook">Facebook Account</string>
    <string name="lblTwitter">Twitter</string>
    <string name="txtTwitter">Twitter Account</string>
    <string name="lblFindMeTool">Find me tool</string>
    <string name="switchActivateTool">Invisible mode</string>
    <string name="btnSaveContactMeChanges">Save Contact Me</string>
    <string name="selectInterestMusic">Music</string>
    <string name="selectInterestMovies">Movies</string>
    <string name="selectInterestLiterature">Literature</string>
    <string name="selectInterestArt">Art</string>
    <string name="selectInterestTVShows">TV Shows</string>
    <string name="selectInterestSports">Sports</string>
    <string name="selectInterestScience">Science</string>
    <string name="selectInterestLookingFor">Looking For</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="textRequired">Selected fields must be filled</string>
    <string name="contactRequired">Please select a contact</string>
    <string name="title_activity_home">Home</string>
    <string name="lblMatchhome">MatchName</string>
    <string name="spnEvent">Choose Event</string>
    <string name="txtaddphoto">Add a photo</string>
    <string name="txttakephoto">Take Photo</string>
    <string name="txtaddfromgallery">Choose from Gallery</string>
    <string name="txtphotocancel">Cancel</string>
    <string name="title_activity_login">Login</string>
    <string name="txtLoginUserName">Username</string>
    <string name="txtLoginPassword">Password</string>
    <string name="toastWrongLogIn">Wrong email or password</string>
    <string name="btnlogin">Accept</string>
    <string name="btnRegister">Register</string>

    <array name="navigation_iconos">
        <item>@drawable/ic_action_user</item>
        <item>@drawable/ic_action_user</item>
        <item>@drawable/ic_action_user</item>
        <item>@drawable/ic_action_user</item>
        <item>@drawable/ic_action_user</item>
        <item>@drawable/ic_action_settings</item>
    </array>

    <string name="title_activity_my_settings">MySettings</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="editTextUserName">Email Address</string>
    <string name="editTextPassword">Password</string>
    <string name="editTextConfirmPassword">Confirm Password</string>
    <string name="btnCreateAccount">Create Account</string>
    <string name="btnCancelSignUp">Cancel</string>
    <string name="toastEmptyField">Empty field</string>
    <string name="toastEmail">Email already exists</string>
    <string name="toastPassword">Password does not match</string>
    <string name="toastCheckEmail">Please provide a valid email address</string>
    <string name="toastAccountSuccess">Account Successfully Created</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_find_me_tool">FindMeTool</string>
    <string name="title_activity_match_profile">Match Profile</string>
    <string name="lblMatchName">Match Name</string>
    <string name="btnClose">Close Profile</string>
    <string name="findMatch">Find</string>
    <string name="imageMatch" translatable="false">Match Image</string>
    <string name="lblMatchInterests">Interests</string>
    <string name="lblMatchContactedBy">Get contacted by</string>
    <string name="matchPercentage">General match: </string>
    <string name="categoryPercentage">Category match: </string>

    <!-- Settings -->

    <string name="showinterests">Show interests</string>
    <string name="showcontactme">Show Contact Me</string>
    <string name="privacyoptions">Privacy Options</string>
    <string name="wifi">Wi-Fi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="dataconnection">Data Connection</string>
    <string name="application">Application</string>
    <string name="advancedoptions">Advanced Options</string>
    <string name="espanol">Español</string>
    <string name="english">English</string>
    <string name="languageoptions">Language Options</string>
    <string name="always">Always</string>
    <string name="minutes2">2 minutes</string>
    <string name="minutes5">5 minutes</string>
    <string name="minutes10">10 minutes</string>
    <string name="minutes15">15 minutes</string>
    <string name="intervalscan">Interval Scan</string>
    <string name="privacyoptiontoast">Privacy Option = </string>
    <string name="advancedoptiontoast">Advanced Option = </string>
    <string name="languageoptiontoast">Selected Language = </string>
    <string name="intervalscantoast">Interval scan-time selected = </string>
    <string name="lblminmatchpercentage">Minimum matching percentage</string>
    <string name="lblnotifications">Notifications</string>
    <string name="lblsound">Sound</string>
    <string name="lblvibration">Vibration</string>
    <string name="lblprivacy">Privacy</string>

    <!-- BackgroundService -->

    <string name="Matchfound">Match found</string>
    <string name="seePerson">Do you want to see this person?</string>
    <string name="titulo_notification">Clover is Active</string>
    <string name="found_a_match">Found a matching percentage of </string>


    <string name="title_activity_about_us">About us</string>
    <string name="lblVision">Our vision is to provide high quality standards through constant innovation.</string>
    <string name="lblContactUs">Contact us</string>
    <string name="lblCopyright">Copyright © 2014 PI. All rights reserved.</string>

    <!-- GPSHelper -->
    <string name="wifiNotConnectedLogin">Your Network connections seem to be disabled. Do you want to enable it?</string>
    <string name="checkIfLocationEnabledAlert">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="option_yes">Yes</string>
    <string name="option_no">No</string>

    <string name="menu">Menu</string>
    <string name="lblSignal">Search Signal</string>
 </resources>
