<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.pi314.friendonator.GetContactedByActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lblContact"
            android:id="@+id/lblContact" />

        <Space
            android:layout_width="20dp"
            android:layout_height="15dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblCellphone"
                android:id="@+id/lblCellphone"
                android:clickable="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New CheckBox"
                android:id="@+id/checkBox"
                android:checked="false"
                android:clickable="true" />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/txtPhone"
            android:enabled="false" />

        <Space
            android:layout_width="20dp"
            android:layout_height="15dp"
            android:id="@+id/space6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblGoogle"
            android:id="@+id/lblGoogle"
            android:clickable="true" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtGoogle"
            android:inputType="text"
            android:enabled="false" />

        <Space
            android:layout_width="20dp"
            android:layout_height="15dp"
            android:id="@+id/space7" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblFacebook"
            android:id="@+id/lblFacebook" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtFacebook"
            android:inputType="text"
            android:enabled="false" />

        <Space
            android:layout_width="20dp"
            android:layout_height="15dp"
            android:id="@+id/space8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblTwitter"
            android:id="@+id/lblTwitter" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtTwitter"
            android:inputType="none"
            android:enabled="false" />

        <Space
            android:layout_width="20dp"
            android:layout_height="15dp"
            android:id="@+id/space9" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblFindMeTool"
            android:id="@+id/lblFindMeTool" />

        <Space
            android:layout_width="20dp"
            android:layout_height="15dp"
            android:id="@+id/space10" />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switchActivateTool"
            android:id="@+id/switchActivateTool" />

        <Space
            android:layout_width="20dp"
            android:layout_height="15dp"
            android:id="@+id/space11" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSaveContactMeChanges"
            android:id="@+id/btnSaveContactMeChanges" />
    </LinearLayout>

</RelativeLayout>
