<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.pi314.friendonator.ProfileActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/txtProfileName"
                android:ems="10"
                android:id="@+id/txtProfileName" />

            <Space
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/space" />

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <ImageButton
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:id="@+id/btnProfileImage"
                    android:contentDescription="@string/btnProfileImage"
                    android:layout_gravity="center" />
            </FrameLayout>

            <Space
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/space2" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblInterests"
                    android:id="@+id/lblInterests"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnChooseInterest"
                    android:id="@+id/btnChooseInterest"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

            <Space
                android:layout_width="20dp"
                android:layout_height="15dp"
                android:id="@+id/space4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblInterestsList"
                android:id="@+id/lblInterestsList" />

            <Space
                android:layout_width="20dp"
                android:layout_height="15dp"
                android:id="@+id/space5" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblGetContactedBy"
                    android:id="@+id/lblGetContactedBy"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnChooseContact"
                    android:id="@+id/btnChooseContact"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

            <Space
                android:layout_width="20dp"
                android:layout_height="15dp"
                android:id="@+id/space3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblContactedByList"
                android:id="@+id/lblContactedByList" />

            <Space
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnSaveChanges"
                android:id="@+id/btnSaveChanges" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
