<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    android:layout_marginRight="0dp"
    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/Settings">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblminmatchpercentage"
            android:id="@+id/txtMinimunPercentage"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="%"
            android:id="@+id/txtPercentage"
            android:layout_below="@+id/txtMinimunPercentage"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="18dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_blue_dark"
            android:id="@+id/view1"
            android:layout_below="@+id/seekBar"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblnotifications"
            android:id="@+id/txtNotifications"
            android:layout_marginLeft="29dp"
            android:layout_alignBottom="@+id/view2"
            android:layout_marginBottom="23dp" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switchNotifications"
            android:checked="true"
            android:layout_alignBottom="@+id/txtNotifications"
            android:layout_alignLeft="@+id/switchSound"
            android:layout_alignStart="@+id/switchSound" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_blue_dark"
            android:id="@+id/view2"
            android:layout_marginTop="62dp"
            android:layout_below="@+id/view1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblsound"
            android:id="@+id/txtSound"
            android:layout_below="@+id/view2"
            android:layout_alignLeft="@+id/txtNotifications"
            android:layout_alignStart="@+id/txtNotifications"
            android:layout_marginTop="27dp" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switchSound"
            android:checked="true"
            android:layout_toEndOf="@+id/txtMinimunPercentage"
            android:layout_marginLeft="23dp"
            android:layout_alignBottom="@+id/txtSound"
            android:layout_toRightOf="@+id/txtMinimunPercentage" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_blue_dark"
            android:id="@+id/view3"
            android:layout_marginTop="128dp"
            android:layout_below="@+id/view1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblvibration"
            android:id="@+id/txtVibration"
            android:layout_alignBottom="@+id/switch1"
            android:layout_alignLeft="@+id/txtSound"
            android:layout_alignStart="@+id/txtSound" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch1"
            android:checked="true"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/view3"
            android:layout_alignLeft="@+id/switchSound"
            android:layout_alignStart="@+id/switchSound" />


        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_blue_dark"
            android:id="@+id/view4"
            android:layout_marginTop="193dp"
            android:layout_below="@+id/view1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />




        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:layout_alignTop="@+id/txtPercentage"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:max="100"
            android:layout_toRightOf="@+id/txtSound"
            android:layout_toEndOf="@+id/txtSound" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intervalscan"
            android:id="@+id/btnIntervale"
            android:background="@android:color/transparent"
            android:layout_alignParentRight="true"
            android:layout_marginTop="260dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_blue_dark"
            android:id="@+id/view5"
            android:layout_marginTop="242dp"
            android:layout_below="@+id/view1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/btnSaveChanges"
            android:id="@+id/btnSave"
            android:layout_marginTop="400dp"
            android:textColor="@android:color/white"
            android:background="@drawable/button_effect"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_about_us"
            android:id="@+id/btnAboutUs"
            android:background="@android:color/transparent"
            android:layout_alignParentRight="true"
            android:layout_marginTop="310dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:text="New Button"
            android:id="@+id/AboutUsLine"
            android:background="@android:color/holo_blue_dark"
            android:layout_alignBottom="@+id/btnAboutUs"
            android:layout_alignParentLeft="true" />

    </RelativeLayout>
</ScrollView>


    <ListView
        android:id="@+id/drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="#424242"
        android:divider="#2E2E2E"
        android:dividerHeight="2dp"/>

</android.support.v4.widget.DrawerLayout>